fix subpages on firefox 77

--- a/scss/components/_subpages.scss
+++ b/scss/components/_subpages.scss
@@ -39,8 +39,6 @@
     }
 
     @media (min-width: $breakpoint) {
-        margin-top: -$spacer;
-
         &:nth-child(4n+3) a::after {
             bottom: 0;
             top: auto;
@@ -53,8 +51,16 @@
             background: linear-gradient(to top left, transparent 48%, $color-bg 51%);
         }
 
-        &:nth-child(4n+3) {
+        &:nth-child(2n+1) {
             margin-top: 0;
+        }
+
+        &:nth-child(4n) {
+            margin-top: -1em;
+        }
+
+        &:nth-child(4n+3) {
+            margin-bottom: -1em;
         }
     }
 }
